{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f03e3921-82b6-40c7-b5de-443e8b8ab172",
            "actions": [
                {
                    "name": "Moverse",
                    "type": "Value",
                    "id": "3324f3a5-2110-4c90-8ac2-2387ed64298c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Correr",
                    "type": "Button",
                    "id": "281e423d-3e03-4475-9386-52f795728f8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Despl_izq",
                    "type": "Value",
                    "id": "e8fd1e39-ea72-44e6-a738-0472b26f5002",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Despl_Dcha",
                    "type": "Value",
                    "id": "a6240fa2-ff36-4b03-a8dd-ff03600868ee",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a3de973-7eff-4baf-b192-83294d1096f5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd6fa730-863e-4087-933f-b1fa575ad812",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Correr",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bdd495d-f26f-4d21-889b-f784cba5877c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Despl_izq",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb301205-1ae0-4e46-ab07-137876697eb2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Despl_Dcha",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "52d42075-b70e-4053-acb2-09d83d884e5f",
            "actions": [
                {
                    "name": "New action",
                    "type": "Value",
                    "id": "efa64c05-43ee-4ad2-94bf-698d76730b93",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a090e743-9e5c-4c46-a555-f721a2a6d752",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}